Fixed the ImageRank module to work on Firefox

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -414,28 +414,27 @@ table.table td {
   padding: 5px;
   padding-bottom: 25px;
   margin: 0 25px;
-  border: solid red 2px;
+  border: solid green 2px;
   -webkit-box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.2);
   box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.2);
   cursor:move;
 }
-#content #images .frames .photos {
-  clear: left;
-  margin-top: 40px;
-  height: 200px;
-  border: solid red 2px;
-}
-#content #images .frames .photos .photo {
+// #content #images .frames .photos {
+//   clear: left;
+//   position:absolute;
+//   margin-top: 40px;
+//   position:absolute;
+//   border: solid blue 2px;
+// }
+#content #images .frames .frame .photo {
   float: left;
+  position:relative;
   background: white;
-  padding: 5px;
-  padding-bottom: 25px;
-  margin: 0 25px;
-  border: solid red 2px;
-  -webkit-box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.2);
-  box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.2);
+  line-height: 0px;
+  // padding: 5px;
+  // padding-bottom: 25px;
+  // margin: 0 25px;
   cursor:move;
 }
 
